--- a/styles/index.css
+++ b/styles/index.css
@@ -249,7 +249,8 @@ p {
 
 .centrin {
     padding: 25px 30px;
-	text-align: center;
+    text-align: center;
+    color: white;
 }
 
 #informacion {
