--- a/styles/index.css
+++ b/styles/index.css
@@ -26,6 +26,7 @@ header {
     border-bottom: #00000036 solid 1px;
     padding: 17px 10px;
     box-shadow: 1px 1px 4px 1px #9a9a9a61;
+    transition: top 0.5s;
 }
 
 p {
