--- a/styles/index.css
+++ b/styles/index.css
@@ -341,8 +341,13 @@ h2 span {
 	font-size: 85%;
 }
 .column {
-	margin: 12px 57px 0;
-	padding: 0;
+	/*margin: 12px 57px 0;
+	padding: 0;*/
+	display: flex;
+   	padding: 0;
+        justify-content: center;
+        align-content: center;
+        flex-wrap: wrap;
 }
 .column:last-child {
 	padding-bottom: 60px;
