--- a/styles/index.css
+++ b/styles/index.css
@@ -522,7 +522,13 @@ figure:hover+span {
     flex-direction: row;
 }
 
-
+.column {
+    display: flex;
+    padding: 0;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+}	
 
 
 
